@@ -22,6 +22,14 @@ lilv_ptr_cmp(const void* a, const void* b, void* user_data)
 	return (intptr_t)a - (intptr_t)b;
 }
 
+int
+lilv_resource_node_cmp(const void* a, const void* b, void* user_data)
+{
+	const SordNode* an = ((LilvNode*)a)->val.uri_val;
+	const SordNode* bn = ((LilvNode*)a)->val.uri_val;
+	return (intptr_t)an - (intptr_t)bn;
+}
+
 /* Generic collection functions */
 
 static inline LilvCollection*
